--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,13 @@
 aiohttp==3.7.4.post0
-alembic==1.6.5
-anyio==3.1.0
-apache-airflow==2.1.0
-apache-airflow-providers-ftp==1.1.0
-apache-airflow-providers-imap==1.0.1
-apache-airflow-providers-sqlite==1.0.2
-apispec==3.3.2
-appdirs==1.4.4
 appnope==0.1.2
-argcomplete==1.12.3
-async-generator==1.10
 async-timeout==3.0.1
-attrs==20.3.0
-Babel==2.9.1
+attrs==21.2.0
 backcall==0.2.0
-blinker==1.4
-cached-property==1.5.2
 cachetools==4.2.2
-cattrs==1.0.0
 certifi==2021.5.30
 cffi==1.14.5
-cfgv==3.3.0
 chardet==4.0.0
-click==7.1.2
-clickclick==20.10.2
-colorama==0.4.4
-colorlog==5.0.1
-commonmark==0.9.1
-contextvars==2.4
-croniter==1.0.13
-cryptography==3.4.7
-dask==2021.3.0
-dataclasses==0.8
 decorator==5.0.9
-defusedxml==0.7.1
-dill==0.3.4
-distlib==0.3.2
-dnspython==2.1.0
-docutils==0.17.1
-email-validator==1.1.3
-entrypoints==0.3
-filelock==3.0.12
-Flask==1.1.4
-Flask-AppBuilder==3.3.0
-Flask-Babel==1.0.0
-Flask-Caching==1.10.1
-Flask-JWT-Extended==3.25.1
-Flask-Login==0.4.1
-Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
 fsspec==2021.6.0
 future==0.18.2
 gcsfs==0.8.0
@@ -57,123 +15,51 @@ google-api-core==1.30.0
 google-auth==1.31.0
 google-auth-oauthlib==0.4.4
 google-cloud-bigquery==2.16.1
-google-cloud-bigquery-storage==2.4.0
 google-cloud-core==1.7.0
 google-crc32c==1.1.2
 google-resumable-media==1.3.0
 googleapis-common-protos==1.53.0
-graphviz==0.16
-grpcio==1.38.0
-gunicorn==20.1.0
-gusty==0.6.0
-h11==0.12.0
-httpcore==0.13.6
-httpx==0.18.2
-identify==2.2.10
 idna==2.10
-idna-ssl==1.1.0
-immutables==0.15
-importlib-metadata==1.7.0
-importlib-resources==1.5.0
-inflection==0.5.1
 iniconfig==1.1.1
-intake==0.6.1
 ipdb==0.13.4
-ipython==7.16.1
+ipython==7.24.1
 ipython-genutils==0.2.0
-iso8601==0.1.14
-isodate==0.6.0
-itsdangerous==1.1.0
 jedi==0.18.0
-Jinja2==2.11.3
-jsonschema==3.2.0
-jupyter-core==4.7.1
-jupytext==1.11.3
-lazy-object-proxy==1.6.0
-libcst==0.3.19
-lockfile==0.12.2
-Mako==1.1.4
-Markdown==3.3.4
-markdown-it-py==1.1.0
-MarkupSafe==1.1.1
-marshmallow==3.12.1
-marshmallow-enum==1.5.1
-marshmallow-oneofschema==2.1.0
-marshmallow-sqlalchemy==0.23.1
-mdit-py-plugins==0.2.8
+matplotlib-inline==0.1.2
 multidict==5.1.0
-mypy-extensions==0.4.3
-nbformat==5.1.3
-nodeenv==1.6.0
-numpy==1.19.5
+numpy==1.20.3
 oauthlib==3.1.1
-openapi-schema-validator==0.1.5
-openapi-spec-validator==0.3.1
 packaging==20.9
 pandas==1.1.4
 pandas-gbq==0.14.1
 parso==0.8.2
-pendulum==2.1.2
-pep562==1.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==0.13.1
-pre-commit==2.13.0
-prison==0.1.3
-prompt-toolkit==3.0.18
+prompt-toolkit==3.0.19
 proto-plus==1.18.1
 protobuf==3.17.3
-psutil==5.8.0
 ptyprocess==0.7.0
 py==1.10.0
-pyarrow==4.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybigquery==0.7.0
 pycparser==2.20
 pydata-google-auth==1.2.0
 Pygments==2.9.0
-PyJWT==1.7.1
 pyparsing==2.4.7
-pyrsistent==0.17.3
 pytest==6.2.4
-python-daemon==2.3.0
 python-dateutil==2.8.1
-python-editor==1.0.4
-python-frontmatter==1.0.0
-python-nvd3==0.15.0
-python-slugify==4.0.1
-python3-openid==3.2.0
 pytz==2021.1
-pytzdata==2020.1
-PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
-rfc3986==1.5.0
-rich==10.3.0
 rsa==4.7.2
-setproctitle==1.2.2
 six==1.16.0
-sniffio==1.2.0
 SQLAlchemy==1.3.24
-SQLAlchemy-JSONField==1.0.0
-SQLAlchemy-Utils==0.37.7
-swagger-ui-bundle==0.0.8
-tabulate==0.8.9
-tenacity==6.2.0
-termcolor==1.1.0
-text-unidecode==1.3
 toml==0.10.2
-traitlets==4.3.3
-typing==3.7.4.3
+traitlets==5.0.5
 typing-extensions==3.10.0.0
-typing-inspect==0.7.1
 ujson==4.0.2
-unicodecsv==0.14.1
 urllib3==1.26.5
-virtualenv==20.4.7
 wcwidth==0.2.5
-Werkzeug==1.0.1
-WTForms==2.3.3
 yarl==1.6.3
-zipp==3.4.1
