--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.7.4.post0
+appdirs==1.4.4
 appnope==0.1.2
 async-timeout==3.0.1
 attrs==21.2.0
@@ -6,8 +7,11 @@ backcall==0.2.0
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.5
+cfgv==3.3.0
 chardet==4.0.0
 decorator==5.0.9
+distlib==0.3.2
+filelock==3.0.12
 fsspec==2021.6.0
 future==0.18.2
 gcsfs==0.8.0
@@ -19,6 +23,8 @@ google-cloud-core==1.7.0
 google-crc32c==1.1.2
 google-resumable-media==1.3.0
 googleapis-common-protos==1.53.0
+grpcio==1.38.0
+identify==2.2.10
 idna==2.10
 iniconfig==1.1.1
 ipdb==0.13.4
@@ -27,6 +33,7 @@ ipython-genutils==0.2.0
 jedi==0.18.0
 matplotlib-inline==0.1.2
 multidict==5.1.0
+nodeenv==1.6.0
 numpy==1.20.3
 oauthlib==3.1.1
 packaging==20.9
@@ -51,6 +58,7 @@ pyparsing==2.4.7
 pytest==6.2.4
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
@@ -61,5 +69,6 @@ traitlets==5.0.5
 typing-extensions==3.10.0.0
 ujson==4.0.2
 urllib3==1.26.5
+virtualenv==20.4.7
 wcwidth==0.2.5
 yarl==1.6.3
