--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,5 @@ repos:
     rev: 1.7.0
     hooks:
       - id: bandit
-        args: ["-ll", "--skip=B108,B608"]
+        args: ["-ll", "--skip=B108,B608,B701"]
         files: .py$
-
