--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ ipdb==0.13.4
 ipython==7.24.1
 ipython-genutils==0.2.0
 jedi==0.18.0
+jinja2==3.0.1
 matplotlib-inline==0.1.2
 multidict==5.1.0
 nodeenv==1.6.0
