--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
-git+https://github.com/machow/siuba.git@feat-bigquery
+git+https://github.com/machow/siuba.git@stable
 six==1.16.0
 SQLAlchemy==1.3.24
 toml==0.10.2
