--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
 
   docs:
     name: "Generate Docs"
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
