--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -88,7 +88,7 @@ pyzmq==22.3.0
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
-siuba==0.0.25
+git+https://github.com/machow/siuba.git@stable
 six==1.16.0
 SQLAlchemy==1.3.24
 testpath==0.5.0
