--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: "Build docs folder"
         run: |
-          make docs-build/README.md
+          make docs-build/README.html
 
       - name: Deploy
         if: ${{ github.ref == 'refs/heads/docs' }}
