--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,7 @@ jobs:
   build_push:
     name: Package docker image
     runs-on: ubuntu-18.04
+    if: ${{ contains(github.ref, "docker") }}
     steps:
       #- uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -21,5 +22,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: ${{ github.event_name == "release" && github.event.action == "published" }}
           tags: ghcr.io/${{github.repository}}:${{ github.event.release.tag_name }}
