--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          push: ${{ github.event_name == "release" && github.event.action == "published" }}
+          push: ${{ github.event_name == 'release' && github.event.action == 'published' }}
           tags: ghcr.io/${{github.repository}}:${{ github.event.release.tag_name }}
