--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,6 +2,8 @@ name: Build docker image
 
 on:
   push:
+    branches:
+      - "*docker*"
   release:
     types: [ published ]
 
@@ -9,7 +11,6 @@ jobs:
   build_push:
     name: Package docker image
     runs-on: ubuntu-18.04
-    if: ${{ contains(github.ref, 'docker') }}
     steps:
       #- uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
