--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,11 @@ jobs:
         run: |
           pytest
 
-
+  release:
     name: "Release to PyPI"
     runs-on: ubuntu-latest
+    needs: checks
+    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
 
       - uses: actions/checkout@v2
@@ -44,7 +46,6 @@ jobs:
 
       - name: "Upload to PyPI"
         uses: pypa/gh-action-pypi-publish@release/v1
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         with:
           user: __token__
           password: ${{ secrets.PYPI_TEST_API_TOKEN }}
