--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Lint and style checks
+name: CI
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
     name: "Release to PyPI"
     runs-on: ubuntu-latest
     needs: checks
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release'
     steps:
 
       - uses: actions/checkout@v2
@@ -44,9 +44,17 @@ jobs:
         run: |
           python setup.py build sdist
 
-      - name: "Upload to PyPI"
+      - name: "TEST Upload to PyPI"
         uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event.action == 'prereleased'
         with:
           user: __token__
           password: ${{ secrets.PYPI_TEST_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
+
+      - name: "Upload to PyPI"
+        uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event.action == 'published'
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
