--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: "Upload to PyPI"
         uses: pypa/gh-action-pypi-publish@release/v1
-        if: !github.event.release.prerelease
+        if: "!github.event.release.prerelease"
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
