--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+        uses: pre-commit/action@v2.0.0
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
           python -m pip install .
-          python -m pip install pre_commit
-          python -m pre_commit install
 
       - uses: google-github-actions/setup-gcloud@master
         with:
