--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+      - name: Set up Pre-commit
         uses: pre-commit/action@v2.0.0
       - name: Install dependencies
         run: |
