--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,16 +75,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      # build release image ----
+      - name: "Release: Build and push"
         uses: docker/build-push-action@v2
-        if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
+        if: ${{ github.event_name == 'release' &&  startsWith('hub', github.event.release.tag_name) }}
         with:
           push: true
           tags: ghcr.io/${{github.repository}}:${{ github.event.release.tag_name }}
 
-      - name: Build and push
+      # build any image pushed on a branch starting with development ----
+      - name: "Development: Build and push"
         uses: docker/build-push-action@v2
-        if: ${{ github.event_name != 'release' && contains('docker', github.ref) }}
+        if: ${{ github.event_name != 'release' && startsWith('development', github.ref_name) }}
         with:
-          push: false
-          tags: ghcr.io/${{github.repository}}:test
+          push: true
+          tags: ghcr.io/${{github.repository}}:${{github.ref_name}}
