--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     name: Package docker image
     runs-on: ubuntu-18.04
     needs: ["checks", "release"]
-    if: "needs.release.result == 'success' || needs.release.result == 'skipped'"
+    if: "success('checks') && !failure('release')"
     steps:
       #- uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
