--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     name: "Release to PyPI"
     runs-on: ubuntu-latest
     needs: checks
-    if: github.event_name == 'release'
+    if: "github.event_name == 'release' && startsWith(github.event.release.tag_name, 'v')"
     steps:
 
       - uses: actions/checkout@v2
