--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install .
 
-      - uses: google-github-actions/setup-gcloud@master
+      - uses: 'google-github-actions/setup-gcloud@v0'
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
