--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ ptyprocess==0.7.0
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pybigquery==0.7.0
+sqlalchemy-bigquery==1.4.3
 pycparser==2.20
 pydata-google-auth==1.2.0
 Pygments==2.9.0
