get going with poetry!

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v2.4.0
     hooks:
       - id: flake8
+        args: ["--ignore=E501,W503"] # line too long and line before binary operator (black is ok with these)
         types:
           - python
       - id: trailing-whitespace
@@ -20,3 +21,8 @@ repos:
       - id: bandit
         args: ["-ll", "--skip=B108,B608,B701"]
         files: .py$
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort (python)
