--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,11 @@ jobs:
     name: "lint"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+      - uses: actions/checkout@v2
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.0
 
@@ -23,7 +23,6 @@ jobs:
     name: "pytest"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -34,8 +33,10 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      - uses: actions/checkout@v2
       - name: Run tests
         run: |
+          poetry install
           poetry run pytest
 
   release:
