--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: pre-commit/action@v2.0.0
 
   test:
-    name: "pytest"
+    name: "test"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
