--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Run tests
         run: poetry run pytest
 
-  release:
-    name: "Release to PyPI"
+  test_release:
+    name: "Release to TEST PyPI"
     runs-on: ubuntu-latest
     needs:
       - lint
@@ -57,7 +57,8 @@ jobs:
         with:
           repository_name: testpypi
           repository_url: https://test.pypi.org/legacy/
-          pypi_token: ${{ secrets.PYPI_TEST_API_TOKEN }}
+          repository_username: __token__
+          repository_password: ${{ secrets.PYPI_TEST_API_TOKEN }}
           build_format: "sdist"
 
 #      - name: "Upload to PyPI"
