--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ sqlalchemy-bigquery = "^1.4.4"
 google-cloud-bigquery = "^3.2.0"
 gtfs-realtime-bindings = "^0.0.7"
 siuba = "^0.3.0"
+humanize = "^4.2.3"
+pendulum = "^2.1.2"
+pydantic = "^1.9.1"
 Jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
