--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.7.13-alpha.2"
+version = "2022.7.13-alpha.3"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
@@ -16,8 +16,8 @@ gtfs-realtime-bindings = "^0.0.7"
 humanize = "^4.2.3"
 pendulum = "^2.1.2"
 pydantic = "^1.9.1"
-Jinja2 = "^3.1.2"
 siuba = "^0.3.0"
+Jinja2 = "<3.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
