--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,27 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.7.13-alpha.3"
+version = "2022.7.13-alpha.8"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 gcsfs = "^2022.5.0"
 pandas = "^1.4.3"
 pandas-gbq = "^0.17.6"
 sqlalchemy-bigquery = "^1.4.4"
-google-cloud-bigquery = "^3.2.0"
+google-cloud-bigquery = "<3.0.0dev,>=1.15.0"
 gtfs-realtime-bindings = "^0.0.7"
 humanize = "^4.2.3"
 pendulum = "^2.1.2"
 pydantic = "^1.9.1"
 siuba = "^0.3.0"
 Jinja2 = "<3.1.0"
+# These are just to play nicely with composer
+google-cloud-bigquery-storage = "2.14.1"
+google-api-core = "<2.0.0dev,>=1.32.0"
+protobuf = ">=3.19.0,<4.0.0dev"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
