downgrade pandas-gbq

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 python = ">=3.8,<3.11"
 gcsfs = "^2022.5.0"
 pandas = "^1.4.3"
-pandas-gbq = "^0.17.6"
+pandas-gbq = "<0.15.0"
 sqlalchemy-bigquery = "^1.4.4"
 google-cloud-bigquery = "<3.0.0dev,>=1.15.0"
 gtfs-realtime-bindings = "^0.0.7"
