--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.8.9-alpha.2"
+version = "2022.8.9-alpha.3"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
@@ -27,6 +27,7 @@ tqdm = "^4.64.0"
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
 pytest = "^7.1.2"
+hypothesis = "^6.54.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
