--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.9.1a0"
+version = "2022.9.1a1"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
@@ -24,6 +24,7 @@ google-cloud-bigquery-storage = "2.14.1"
 google-api-core = "<2.0.0dev,>=1.32.0"
 protobuf = ">=3.19.0,<4.0.0dev"
 tqdm = "^4.64.0"
+google-cloud-secret-manager = "^2.12.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
