--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ google-api-core = "<2.0.0dev,>=1.32.0"
 protobuf = ">=3.19.0,<4.0.0dev"
 tqdm = "^4.64.0"
 backoff = "^2.1.2"
+google-cloud-secret-manager = "^2.12.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
