--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ python = ">=3.8,<3.11"
 fsspec = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
 gcsfs = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
 pandas = "^1.3.3"
-pandas-gbq = "<0.15.0"
 sqlalchemy-bigquery = "^1.4.4"
 google-cloud-bigquery = "<3.0.0dev,>=1.15.0"
 gtfs-realtime-bindings = "^0.0.7"
@@ -26,6 +25,7 @@ protobuf = ">=3.19.0,<4.0.0dev"
 tqdm = "^4.64.0"
 backoff = "^2.1.2"
 google-cloud-secret-manager = "^2.12.4"
+pandas-gbq = "^0.17.9"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
