also pin us to older typing extensions version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ tqdm = "^4.64.0"
 backoff = "^2.1.2"
 google-cloud-secret-manager = "1.0.0"
 pandas-gbq = "<0.15.0"
+typing-extensions = "3.10.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
