--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.10.27.2"
+version = "2022.10.27.3"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
@@ -9,7 +9,6 @@ license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 python = ">=3.8,<3.11"
 fsspec = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
 gcsfs = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
-pandas = "^1.3.3"
 sqlalchemy-bigquery = "^1.4.4"
 google-cloud-bigquery = "<3.0.0dev,>=1.15.0"
 gtfs-realtime-bindings = "^0.0.7"
@@ -25,8 +24,9 @@ protobuf = ">=3.19.0,<4.0.0dev"
 tqdm = "^4.64.0"
 backoff = "^2.1.2"
 google-cloud-secret-manager = "1.0.0"
-pandas-gbq = "<0.15.0"
 typing-extensions = "3.10.0.2"
+pandas = "1.3.3"
+pandas-gbq = "0.14.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
