--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "calitp"
-version = "2022.10.27.3"
+version = "2022.11.28"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-fsspec = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
-gcsfs = "^2022.5.0,!=2022.7.1" # https://github.com/fsspec/gcsfs/issues/486
+gcsfs = "2022.5.0"  # https://github.com/fsspec/gcsfs/issues/486
+fsspec = "2022.5.0"  # https://github.com/fsspec/gcsfs/issues/486
 sqlalchemy-bigquery = "^1.4.4"
 google-cloud-bigquery = "<3.0.0dev,>=1.15.0"
 gtfs-realtime-bindings = "^0.0.7"
