--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -1,15 +1,17 @@
 [tool.poetry]
 name = "calitp-data-analysis"
-version = "2023.2.9a0"
+version = "2023.2.9"
 description = ""
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "~3.9"
-calitp = "2023.2.9a0"
 ipython = "^8.9.0"
 siuba = "^0.4.2"
-jinja2 = "^3.1.2"
+jinja2 = "<3.1.0"
+calitp = "2023.2.9"
+sqlalchemy-bigquery = "^1.6.1"
+pandas-gbq = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 
