--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
     rev: 23.1.0
     hooks:
       - id: black
+        args: ["--line-length", "120"]
   - repo: https://github.com/pycqa/bandit
     rev: 1.7.4
     hooks:
