--- a/calitp/pyproject.toml
+++ b/calitp/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "calitp"
-version = "2023.2.9"
+version = "2023.2.10a0"
 description = "Shared code for the Cal-ITP data codebases"
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 
 [tool.poetry.dependencies]
-python = "~3.9"
+python = ">=3.8,<3.10"
 gcsfs = "2022.5.0"  # https://github.com/fsspec/gcsfs/issues/486
 fsspec = "2022.5.0"  # https://github.com/fsspec/gcsfs/issues/486
 
