--- a/calitp-data-infra/pyproject.toml
+++ b/calitp-data-infra/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp-data-infra"
-version = "2023.2.10.1"
+version = "2023.2.10.2"
 description = ""
 authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
 
@@ -15,7 +15,7 @@ pendulum = "^2.1.2"
 humanize = "^4.6.0"
 backoff = "^2.2.1"
 google-api-core = ">=1.32.0,<2.0.0dev"
-typing-extensions = ">=3.10.0.2,<4.0.0"
+typing-extensions = ">=3.10.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
