--- a/calitp-data/pyproject.toml
+++ b/calitp-data/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "calitp"
-version = "2023.2.10"
+name = "calitp-data"
+version = "2023.2.13"
 description = "Shared code for the Cal-ITP data codebases"
-authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
+authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"
 
 [tool.poetry.dependencies]
