--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -9,9 +9,9 @@ python = "~3.9"
 ipython = "^8.9.0"
 siuba = "^0.4.2"
 jinja2 = "<3.1.0"
-calitp = "2023.2.10"
 sqlalchemy-bigquery = "^1.6.1"
 pandas-gbq = "^0.19.1"
+calitp-data = "2023.2.13"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
