--- a/calitp-data-infra/pyproject.toml
+++ b/calitp-data-infra/pyproject.toml
@@ -1,21 +1,20 @@
 [tool.poetry]
 name = "calitp-data-infra"
-version = "2023.2.15"
+version = "2023.2.15.1"
 description = "Shared code for developing data pipelines that process Cal-ITP data."
 authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
+calitp-data = "2023.2.15.1"
 # Some of these are pinned oddly to play nicely with Composer
 pydantic = "~1.9"
-google-cloud-bigquery-storage = "2.14.1"
 tqdm = "^4.64.1"
 pendulum = "^2.1.2"
 humanize = "^4.6.0"
 backoff = "^2.2.1"
-google-api-core = ">=1.32.0,<2.0.0dev"
+google-api-core = ">=1.32.0"
 typing-extensions = ">=3.10.0.2"
-calitp-data = "2023.2.13.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
