--- a/calitp-data-infra/pyproject.toml
+++ b/calitp-data-infra/pyproject.toml
@@ -16,6 +16,7 @@ backoff = "^2.2.1"
 google-api-core = ">=1.32.0,<2.0.0dev"
 typing-extensions = ">=3.10.0.2"
 calitp-data = "2023.2.13.1"
+google-cloud-secret-manager = "~1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
