--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -24,3 +24,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+
+[tool.pytest.ini_options]
+env_files = ['.test.env']
