--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -12,6 +12,8 @@ jinja2 = "<3.1.0"
 sqlalchemy-bigquery = "^1.6.1"
 pandas-gbq = "^0.19.1"
 calitp-data = "2023.2.13.1"
+geopandas = "^0.12.2"
+pendulum = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
