--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp-data-analysis"
-version = "2023.2.15"
+version = "2023.3.3"
 description = "Shared code for querying Cal-ITP data in notebooks, primarily."
 authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
 
@@ -14,6 +14,7 @@ pandas-gbq = "^0.19.1"
 calitp-data = "2023.2.13.1"
 geopandas = "^0.12.2"
 pendulum = "^2.1.2"
+tqdm = "^4.64.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
