--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -12,7 +12,7 @@ jinja2 = "<3.1.0"
 sqlalchemy-bigquery = "^1.6.1"
 pandas-gbq = "^0.19.1"
 calitp-data = "2023.2.13.1"
-pandas = "<2"
+pandas = "<2" # keep us below pandas 2.0 since pandas-gbq does not specify, and siuba errors currently
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
